# ojuri

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt
docs/: try-it-out.md
docs/architecture/: ARCHITECTURE.md  DECISIONS.md  Ojuri_Architecture_v1.1.docx  SOURCE_PROMPT.md
docs/design/: agents.md
examples/: case_briefing.md
ojuri/agents/: auditor_verdict.py  finding.py  loop.py
ojuri/agents/auditor/: system_prompt.md
ojuri/agents/investigator/: system_prompt.md
ojuri/agents/prompts/: auditor.md  investigator.md
ojuri/mcp_server/: server.py
ojuri/mcp_server/audit/: __init__.py
ojuri/mcp_server/backends/: base.py
ojuri/mcp_server/backends/sift/: discovery.py  evidence.py  mft.py  prefetch.py  (+1 more)
ojuri/mcp_server/primitives/: hello_world.py  list_evidence_artefacts.py  mft_timeline.py  prefetch_entries.py  registry_autostarts.py  user_autostarts.py
scripts/: baseline_evidence.py  install.sh  mount_evidence.sh  open_evidence.sh  run_server.sh  setup_agents.sh  verify_chain.py
tests/integration/: test_agent_loop.py  test_audit_integration.py  test_evidence_layer.py  test_hello_world_smoke.py  test_list_evidence_artefacts.py  test_mft_timeline.py  test_prefetch_entries.py  test_registry_autostarts.py  test_user_autostarts.py
tests/spoliation/: README.md
tests/unit/: test_audit.py  test_auditor_verdict_schema.py  test_finding_schema.py  test_list_evidence_artefacts.py  test_mft_timeline.py  test_prefetch_entries.py  test_registry_autostarts.py  test_user_autostarts.py  test_verify_chain.py
